--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
 .container {
     style="padding: 15px;
 }
+
+#game {
+    background-color: #4aaaa5;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    text-align: center;
+    color: #ffffff;
+    z-index: 1;
+    position: absolute;
+    bottom: 1em;
+    left: 0em;
+    width: 100%;
+  }
