fooling around with styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,10 @@
     from {color: white;}
     to {color: black}
   }
+
+  #hiddenword {
+    background-color: lightgray;
+    text-align: center;
+    padding: 5px;
+    display: none;
+  }
